--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,6 +9,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -20,6 +21,6 @@
             android:windowSoftInputMode="adjustResize"
             />
         <activity android:name=".NoteList"></activity>
+        <receiver android:name=".notification.BroadCast"></receiver>
     </application>
-
 </manifest>
